--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,23 @@ jobs:
       - name: Build the app
         run: npm run build
 
-      # 👇 PASO OPCIONAL: Construir la imagen Docker
-      - name: Build Docker Image (opcional)
+      # 🐳 Construir imagen Docker
+      - name: Build Docker Image
         run: docker build -t my-react-app .
 
+      # 🔐 Login a Docker Hub
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # 📤 Push de la imagen a Docker Hub
+      - name: Push Docker Image to Docker Hub
+        run: |
+          docker tag my-react-app ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
+
+      # 🚀 Deploy a GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./dist  # Cambia a ./build si usas Create React App
