--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,19 +27,17 @@ jobs:
       - name: Build the app
         run: npm run build
 
-      - name: Build Docker Image
-        run: docker build -t my-react-app .
+      - name: Build Docker Image con nombre completo
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest .
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker Image to Docker Hub
-        run: |
-          docker tag my-react-app ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist  # Usa ./build si tu proyecto es Create React App
+          publish_dir: ./dist  # Usa ./build si es Create React App
