--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,8 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest \
-            --push .
+            --push \
+            .
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
