--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,11 +35,7 @@ jobs:
 
       - name: Build & Push Docker Image
         run: |
-          docker buildx build \
-            --platform linux/amd64 \
-            -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest \
-            --push \
-            .
+          docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest --push .
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
