--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build & Push Docker Image
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
-        run: |
-          docker buildx build --platform linux/amd64 -t $DOCKER_USER/my-react-app:latest --push .
+        run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest --push .
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
