--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,30 +13,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 🧾 Descargando código del repositorio
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: ⚙️ Configurando Node.js versión 18
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - name: 📦 Instalando dependencias
+        run: |
+          echo "🔧 Ejecutando npm install..."
+          npm install
 
-      - name: Build the app
-        run: npm run build
+      - name: 🏗️ Compilando la aplicación React
+        run: |
+          echo "📂 Ejecutando npm run build para generar la carpeta /dist..."
+          npm run build
 
-      - name: Set up Docker Buildx
+      - name: ⚙️ Activando Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: 🔐 Iniciando sesión en Docker Hub
+        run: |
+          echo "🔐 Autenticando con Docker Hub..."
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "✅ Login exitoso"
 
-      - name: Build & Push Docker Image
-        run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest --push .
+      - name: 🐳 Construyendo y subiendo la imagen a Docker Hub
+        env:
+          USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        run: |
+          echo "🚧 Iniciando construcción de imagen Docker para el usuario $USERNAME"
+          docker buildx build --platform linux/amd64 -t $USERNAME/my-react-app:latest --push .
+          echo "✅ Imagen construida y subida correctamente como $USERNAME/my-react-app:latest"
 
-      - name: Deploy to GitHub Pages
+      - name: 🚀 Desplegando en GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
